--- a/clientBlogs/src/components/css/HorzBlogCard.css
+++ b/clientBlogs/src/components/css/HorzBlogCard.css
@@ -25,7 +25,14 @@
 #cardContainer .title {
     font-size: 18px;
     color: #F74D79;
-    padding: 0px 18px
+    padding: 0px 18px;
+
+    font-family: "Roboto";
+                font-weight: 700;
+            
+                line-height: 21px;
+                letter-spacing: 0.05em;;
+                
 }
 
 #cardContainer .blogDetails {
@@ -45,6 +52,10 @@
     color: white;
     padding: 4px;
     font-size: 12px;
+    font-family: "Questrial";
+    font-weight: 400;
+    line-height:12px;
+    letter-spacing: 0.05em;
 }
 
 #cardContainer .blogDetails>div .date {
@@ -62,6 +73,10 @@
     padding-right: 8px;
     font-size: 12px;
     margin-left: 5px;
+
+
+
+    
 }
 
 #cardContainer .cardActions {
