--- a/clientBlogs/src/pages/css/Connect.css
+++ b/clientBlogs/src/pages/css/Connect.css
@@ -118,7 +118,7 @@
     margin-top: 5px;
 }
 
-.container {
+.connect_container {
     display: flex;
     flex-direction: column;
     margin-left: 78px;
