--- a/clientBlogs/src/pages/css/IndividualBlogs.css
+++ b/clientBlogs/src/pages/css/IndividualBlogs.css
@@ -19,7 +19,7 @@
     align-items: center;
     gap: 16px;
     position: relative;
-    top: -100px;
+    top: -334px;
 }
 
 .heroBanner .container>.title {
@@ -28,19 +28,19 @@
     font-weight: 500;
 }
 
-.heroBanner .container>.X {
+.heroBanner .container .usernameContainer>.X {
     font-size: 36px;
     font-weight: 900;
     color: grey;
 }
 
-.heroBanner .container>.username {
+.heroBanner .container .usernameContainer>.username {
     font-size: 23px;
     color: white;
     font-weight: 500;
 }
 
-.heroBanner .container>img {
+.heroBanner .container .usernameContainer>img {
     width: "36px";
     height: "36px";
     border-radius: "50%";
@@ -78,7 +78,7 @@
     font-weight: 500;
 }
 
-.blogBanner .container>img {
+.blogBanner .container>i .usernameContainermg {
     width: "36px";
     height: "36px";
     border-radius: "50%";
@@ -201,4 +201,69 @@
     margin: 3rem 2rem;
     height: 420px;
     flex-wrap: wrap;
+}
+
+
+@media only screen and (max-width:430px) {
+    .heroBanner {
+        height: 0px;
+    }
+
+    .heroBanner .container {
+        flex-direction: column;
+        width: 100%;
+        padding: 10vw;
+    }
+
+    .heroBanner .container .usernameContainer {
+
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 16px;
+        justify-content: flex-start;
+    }
+
+    .blogBanner .container {
+        flex-direction: column;
+        width: 100%;
+        padding: 10vw;
+    }
+
+    .blogBanner .container .usernameContainer {
+
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 16px;
+        justify-content: flex-start;
+    }
+
+    .blogDetail .container>div .readT {
+        font-size: 16px;
+        color: white;
+        padding: 4px;
+    }
+
+    .dot {
+        height: 6px;
+        width: 6px;
+        background-color: #4B4B4B;
+        border-radius: 50%;
+    }
+
+    .blogDetail .container>div .date {
+        font-size: 16px;
+        color: white;
+        padding: 4px;
+    }
+
+    .blogDetail .container>div .tag {
+        font-size: 16px;
+        color: #F74D79;
+        background-color: rgba(255, 106, 145, 0.12);
+        border-radius: 5px;
+        padding: 4px;
+        padding: 0px 8px;
+    }
 }
