--- a/clientBlogs/src/components/css/Footer.css
+++ b/clientBlogs/src/components/css/Footer.css
@@ -47,23 +47,23 @@
     margin-bottom: 10px;
 }
 
-.logo{
+.footerContainer .logo {
     font-size: 40px !important;
     color: white !important;
     font-family: "Roboto" !important;
 
 }
 
-.logo .commune{
+.footerContainer .logo .commune {
     font-family: "blah";
     font-style: italic;
 }
 
-.contentOuter{
+.footerContainer .contentOuter {
     width: 30%;
 }
 
-.contentPartOne{
+.footerContainer .contentPartOne {
     font-family: 'Roboto';
     font-weight: 500;
     font-size: 18px;
@@ -71,7 +71,7 @@
     color: #FFFFFF;
 }
 
-.contentPartTwo{
+.footerContainer .contentPartTwo {
     font-family: 'Roboto';
     font-weight: 400;
     font-style: italic;
@@ -80,14 +80,14 @@
     color: #FFFFFF;
 }
 
-.pages{
+.footerContainer .pages {
     width: 10%;
 }
 
-.socialmedia{
+.footerContainer .socialmedia {
     width: 30%;
 }
 
-.contact{
+.footerContainer .contact {
     width: 40%;
 }
