--- a/clientBlogs/src/components/css/TrendingBlogCard.css
+++ b/clientBlogs/src/components/css/TrendingBlogCard.css
@@ -32,14 +32,15 @@
     gap: 6px;
 }
 
-#card .cardContent .blogDetails .readT, .date{
+#card .cardContent .blogDetails .readT,
+.date {
     color: white;
     padding: 4px;
     font-family: 'Questrial';
     font-weight: 400;
     font-size: 14.8978px;
     line-height: 15px;
-    letter-spacing:0.05em;
+    letter-spacing: 0.05em;
 
 }
 
@@ -57,7 +58,7 @@
     font-weight: 400;
     font-size: 14.8978px;
     line-height: 15px;
-    letter-spacing:0.05em;
+    letter-spacing: 0.05em;
 
 }
 
@@ -67,13 +68,13 @@
     font-weight: 900;
     font-size: 22.346px;
     line-height: 26px;
-    letter-spacing:0.05em;
+    letter-spacing: 0.05em;
     padding-top: 10px;
 
 
 }
 
-#card  .titleCard{
+#card .titleCard {
     padding-top: 0;
     padding-bottom: 0;
 }
@@ -86,12 +87,12 @@
     color: #626262;
 }
 
-#card .cardContent .description{
+#card .cardContent .description {
     font-family: 'Roboto';
-                font-weight: 300;
-                font-size: 14.878px;
-                line-height: 20px;
-                letter-spacing: 0.05em;
-                color: white;
+    font-weight: 300;
+    font-size: 14.878px;
+    line-height: 20px;
+    letter-spacing: 0.05em;
+    color: white;
 
 }
