--- a/clientBlogs/src/components/css/ControlledCarousel.css
+++ b/clientBlogs/src/components/css/ControlledCarousel.css
@@ -22,3 +22,10 @@
     /* padding: .4em; */
     /* z-index: 2; */
 } 
+
+@media only screen and (min-width: 768px) and (max-width:1024px){
+
+    /* .carouselArrows{
+        height: 70vh;
+    } */
+}
