--- a/clientBlogs/src/pages/css/Home.css
+++ b/clientBlogs/src/pages/css/Home.css
@@ -245,29 +245,41 @@ color: #FFFFFF;
         display: flex;
         flex-direction: column;
         min-height: 100vh;
+        transform: translateY(40px);
+        width: 100%;
     }
     
     .whoAreWeContainer .contentPanel {
         width: 80%;
-        height: 50vh;
+        justify-content: center;
+        align-items: center;
+        
+        
     }
     
     .whoAreWeContainer .contentPanel>h2 {
      
-        margin-bottom: 20px;
+        margin-bottom: 0px;
         font-weight: 400;
-        font-size: 30px;
+        font-size: 35px;
+        padding: 10px;
+        
       }
     
     .whoAreWeContainer .contentPanel>detail {
+            width: 70%;
+            height: fit-content;
+            margin-left: 20px;
+            padding-top: 20px;
   
             font-size: 18px;
-            line-height: 28px;
+            line-height: 25px;
     
     }
     
     .whoAreWeContainer .imagePanel {
         width: 100%;
+        height: fit-content
      
     }
     
@@ -279,11 +291,12 @@ color: #FFFFFF;
 
     .welcomeSection {
 
-        width: 80%;
+        width: 100%;
+        min-height: 50vh;
     }
     
     .welcomeSection>h2 {
-
+        width: 90%;
     font-weight: 300;
     font-size: 45px;
     line-height: 50px;
@@ -291,8 +304,10 @@ color: #FFFFFF;
     }
     
     .welcomeSection>detail {
+        width: 80%;
     font-weight: 400;
-    font-size: 18px; 
+    font-size: 16px; 
+    margin-left: 20px;
     }
 
     .heroLandingImage {
@@ -309,6 +324,10 @@ color: #FFFFFF;
         font-size: 25px;
         font-weight: 400;
         line-height: 36px;
+    }
+
+    .blogSectionInner{
+        transform: translateY(60px);
     }
 
 .blogsBox{
@@ -334,72 +353,33 @@ color: #FFFFFF;
 
 .carouselSection {
     min-height: 100vh;
-    width: 80%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    width: 90%;
 }
 
  .carouselContentContainer {
-    width: 100%;
-
+    width: 85%;
     gap: 5px;
+    transform: translateY(10px);
 }
 
 .carouselSection .carouselContentBtn {
-    border-radius: 30px;
-    text-transform: none;
-    font-size: 15px;
-    min-width: 40px;
-    height: 43.73px;
-    border: 0.83px solid rgba(71, 71, 71, 1);
+    font-size: 18px;
+    min-width: 20%;
+    height: 20%;
+    line-height: 20px;
 
-
-    
-
-    font-family: 'Roboto';
-    font-style: normal;
-    
-    font-size: 23.1px;
-    line-height: 27px;
-    color: #FFFFFF;
-
-    &:hover {
-        background-color: #5f5f5f;
-        
-    }
 }
 
  .carouselDisplayText {
-    /* padding: 20px 0px; */
-    color: rgba(177, 177, 177, 1);
-    width: 100%;
-    /* height: 30vh; */
-    /* margin: 0px auto; */
+ 
+    width: 80%;
     font-size: 20px;
     gap: 10px;
-
-
-   
-
-    font-family: 'Questrial';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 24px;
+    font-weight: 300;
     line-height: 36px;
-    /* or 150% */
-    letter-spacing: 0.05em;
-
-    color: #B1B1B1;
-
-    
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+ 
 
 }
-
-
-
 
 }
 
@@ -432,6 +412,74 @@ color: #FFFFFF;
      letter-spacing: 0.06em;
      margin-top: 10px;
    }
+
+
+.carouselSection {
+    min-height: 100vh;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* transform: translateY(30px); */
+}
+
+ .carouselContentContainer {
+    display: flex;
+    width: 100%;
+    margin-left: auto ;
+    /* transform: translatex(10px); */
+    gap: 7px;
+}
+
+.carouselSection .carouselContentBtn {
+    border-radius: 30px;
+    text-transform: none;
+    font-size: 23px;
+    min-width: 25%;
+    height: 25%;
+    border: 0.83px solid rgba(71, 71, 71, 1);
+
+
+    
+
+    font-family: 'Roboto';
+    font-style: normal;
+    
+    font-size: 23.1px;
+    line-height: 27px;
+    color: #FFFFFF;
+
+    &:hover {
+        background-color: #5f5f5f;
+        
+    }
+}
+
+ .carouselDisplayText {
+    padding: 20px 0px;
+    color: rgba(177, 177, 177, 1);
+    width: 100%;
+    margin: 0px auto;
+    font-size: 24px;
+
+
+   
+
+    font-family: 'Questrial';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 36px;
+    /* or 150% */
+    letter-spacing: 0.05em;
+
+    color: #B1B1B1;
+
+    
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+}
 }
 
 
