--- a/clientBlogs/src/components/css/Hamburger.css
+++ b/clientBlogs/src/components/css/Hamburger.css
@@ -40,7 +40,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
   height: 100%;
   width: 100% !important;
   top: 0px;
-   backdrop-filter: blur(5px);
+   backdrop-filter: blur(10px);
 }
 
 /* General sidebar styles */
@@ -70,6 +70,8 @@ Note: Beware of modifying this element as it can break the animations - you shou
   justify-content: center;
   align-items: center;
   height: 90%;
+  text-transform: uppercase;
+  text-shadow: 0px 0px 2px aliceblue;
 }
 
 .menu-item {
