--- a/clientBlogs/src/components/css/Header.css
+++ b/clientBlogs/src/components/css/Header.css
@@ -8,9 +8,13 @@
     top: 10px !important;
     border-radius: 16px;
     max-width: 1500px;
+    /* min-height: 43px; */
 }
 
-
+.toolbar{
+    min-height: 50px !important;
+    height: 50px;
+}
 .appbar .tab {
     text-transform: none;
     font-size: 14px;
@@ -18,6 +22,7 @@
     margin-right: 16px;
     opacity: 1;
     font-family: 'Questrial', sans-serif;
+    height: 40px !important;
 }
 
 .appbar #avatarContainer {
