--- a/clientBlogs/src/pages/css/IndividualBlogs.css
+++ b/clientBlogs/src/pages/css/IndividualBlogs.css
@@ -1,5 +1,3 @@
-* {}
-
 .section {
     min-height: 100vh;
     display: flex;
@@ -27,6 +25,7 @@
     color: #F74D79;
     font-weight: 500;
 }
+
 .heroBanner .container .usernameContainer {
 
     display: flex;
@@ -35,6 +34,7 @@
     gap: 16px;
     justify-content: flex-start;
 }
+
 .heroBanner .container .usernameContainer>.X {
     font-size: 36px;
     font-weight: 900;
@@ -72,6 +72,7 @@
     color: #F74D79;
     font-weight: 500;
 }
+
 .blogBanner .container .usernameContainer {
 
     display: flex;
@@ -80,6 +81,7 @@
     gap: 16px;
     justify-content: flex-start;
 }
+
 .blogBanner .container .X {
     font-size: 36px;
     font-weight: 900;
@@ -144,12 +146,21 @@
     padding: 0px 8px;
 }
 
-.blogContent {
+.blogContainer {
     width: 90%;
     margin: 0px auto;
+    display: flex;
+    flex-direction: column;
 }
 
-.blogContent .subtitle {
+.blogContainer .blogContent {
+    width: 100%;
+    margin: 0px auto;
+    display: flex;
+
+}
+
+.blogContainer .subtitle {
     color: white;
     padding-top: 40px;
     font-weight: 500;
@@ -157,10 +168,12 @@
     padding-bottom: 1rem;
 }
 
-.blogContent .content {
+.blogContainer .content {
     color: white;
     padding-bottom: 20px;
     font-size: 20px;
+    margin: 20px 0px;
+    text-align: justify;
 }
 
 .reactSection {
@@ -217,6 +230,23 @@
     flex-wrap: wrap;
 }
 
+
+
+@media only screen and (max-width:800px) {
+    .blogContainer .blogContent {
+        width: 100%;
+        margin: 0px auto;
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .blogContainer .blogContent>.image {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+    }
+}
 
 @media only screen and (max-width:430px) {
     .heroBanner {
@@ -280,5 +310,12 @@
         border-radius: 5px;
         padding: 4px;
         padding: 0px 8px;
+    }
+    .blogContainer .subtitle {
+        margin: 0px 40px;
+    }
+    .blogContainer .content {
+        margin: 20px 40px;
+        text-align: justify;
     }
 }
