--- a/clientBlogs/src/components/css/Footer.css
+++ b/clientBlogs/src/components/css/Footer.css
@@ -2,7 +2,7 @@
     padding-top: 3rem;
     padding-left: 7rem;
     border-top: 3px solid white;
-    display: none !important;
+    /* display: none !important; */
 }
 
 .footerContainer .row2 {
@@ -90,4 +90,118 @@
 
 .footerContainer .contact {
     width: 40%;
+}
+
+@media only screen and (min-width:375px) and (max-width:767px){
+    
+    .footerContainer {
+        height: 100vh;
+        width: 100vhS;
+     
+        transform: translatey(70px);
+        padding-top: 0rem;
+        padding-left: 0rem;
+    
+    }
+
+    .footerContainer .logo {
+ 
+        width: 100%;
+            text-align: center;
+        justify-content: center;
+        align-items: center;
+        margin: auto;
+        transform: translatey(10px);
+        
+    
+    }
+    
+    .footerContainer .contentOuter {
+        width: 80%;
+        margin: auto;
+        padding: 5px;
+        position: relative;
+        top: -5px;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+        
+   
+    }
+
+    .footerContainer .contentPartOne {
+        font-weight: 500;
+        font-size: 16px;
+    
+    }
+    
+    .footerContainer .contentPartTwo {
+        font-weight: 400;
+        font-size: 16px;
+    
+    }
+
+    .footerContainer .row2 {
+        display: flex;
+        flex-direction: column;
+        gap: 40px;
+   
+    }
+
+    .footerContainer  .pages {
+    
+        width: 80%;
+        /* margin: auto; */
+        margin-left: 50px;
+         position: relative;
+        top: -25px;
+     
+}
+
+
+.footerContainer .row2 .pageLinks {
+    font-size: 20px;
+    font-weight: 500;
+    margin-bottom: 20px;
+    
+    line-height: 15px;
+
+}
+
+.footerContainer .socialmedia {
+ 
+    width: 80%;
+    /* margin: auto; */
+     position: relative;
+    top: -25px;
+    margin-left: 50px;
+}
+.footerContainer .row2 .socialMedia {
+    font-size: 20px;
+    font-weight: 500;
+    margin-bottom: 20px;
+    line-height: 15px;
+}
+
+.footerContainer .row2 .contactus {
+    font-size: 20px;
+    font-weight: 500;
+    
+    margin-bottom: 30px;
+    line-height: 15px;
+}
+
+
+.footerContainer .contact {
+ 
+    width: 80%;
+    /* margin: auto; */
+     position: relative;
+    top: -25px;
+    margin-left: 50px;
+
+}
+
+
+
 }
