--- a/clientBlogs/src/components/css/TrendingBlogCard.css
+++ b/clientBlogs/src/components/css/TrendingBlogCard.css
@@ -96,3 +96,12 @@
     color: white;
 
 }
+
+@media only screen  and (min-width : 375px) and (max-width : 767px) {
+    #card .cardContent .blogDetails {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 6px;
+    }
+}
