--- a/clientBlogs/src/pages/css/Home.css
+++ b/clientBlogs/src/pages/css/Home.css
@@ -270,7 +270,7 @@ color: #FFFFFF;
             width: 70%;
             height: fit-content;
             margin-left: 20px;
-            padding-top: 20px;
+            /* padding-top: 50px; */
   
             font-size: 18px;
             line-height: 25px;
@@ -349,11 +349,13 @@ color: #FFFFFF;
 .trendingBlog{
     width: 100%;
     height: fit-content;
+    /* height: 40vh; */
 }
 
 .horzBlogsOuter{
     width: 100%;
     height: 50vh;
+    display: none;
 }
 
 
