--- a/clientBlogs/src/components/css/Footer.css
+++ b/clientBlogs/src/components/css/Footer.css
@@ -175,6 +175,7 @@
      position: relative;
     top: -25px;
     margin-left: 50px;
+    /* border-bottom: 2px solid white; */
 }
 .footerContainer .row2 .socialMedia {
     font-size: 20px;
@@ -202,6 +203,30 @@
 
 }
 
+}
 
+@media only screen and (min-width:768) and (max-width:1024){
+
+
+    .footerContainer {
+        padding-top: 3rem;
+        padding-left: 0rem;
+        border-top: 3px solid white;
+        /* margin: auto; */
+        height: 100vh;
+        width: 100vh;
+        /* display: none !important; */
+    }
+.footerContainer .row2 {
+    display: flex;
+    /* flex-direction: column; */
+    gap: 50px;
+    height: 100vh;
+    width: 100vh;
+    padding-bottom: 0rem;
+    padding-top: 0px;
+    margin: auto;
+    transform: translateY(40px);
+}
 
 }
