--- a/clientBlogs/src/pages/css/Home.css
+++ b/clientBlogs/src/pages/css/Home.css
@@ -241,6 +241,43 @@ color: #FFFFFF;
 
 @media only screen and (min-width: 375px) and (max-width:767px){
 
+    .heroLandingImage {
+        /* object-fit: cover;
+        width: 100vw; */
+        height: fit-content;
+    
+    
+    }
+    .carouselSection {
+        min-height: 100vh;
+        width: 90%;
+    }
+    
+     .carouselContentContainer {
+        width: 85%;
+        gap: 5px;
+        transform: translateY(10px);
+    }
+    
+    .carouselSection .carouselContentBtn {
+        font-size: 18px;
+        min-width: 20%;
+        height: 20%;
+        line-height: 29px;
+    
+    }
+    
+     .carouselDisplayText {
+     
+        width: 80%;
+        font-size: 20px;
+        gap: 10px;
+        font-weight: 300;
+        line-height: 30px;
+     
+    
+    }
+
     .whoAreWeContainer {
         display: flex;
         flex-direction: column;
@@ -320,22 +357,7 @@ color: #FFFFFF;
 
     }
 
-    .heroLandingImage {
-        /* object-fit: cover;
-        width: 100vw; */
-        height: fit-content;
-    
-    
-    }
-
-    .carouselDisplayText {
-        padding: 20px 0px;
-        width: 100%;
-        font-size: 25px;
-        font-weight: 400;
-        line-height: 36px;
-    }
-
+   
     .blogSectionInner{
         transform: translateY(60px);
     }
@@ -343,19 +365,20 @@ color: #FFFFFF;
 .blogsBox{
     display: flex;
     flex-direction: column;
-     height: 100vh;
+     height: 75vh;
+     transform: translateY(30px);
 }
 
 .trendingBlog{
     width: 100%;
     height: fit-content;
-    /* height: 40vh; */
+    height: 40vh;
 }
 
 .horzBlogsOuter{
     width: 100%;
-    height: 50vh;
-    display: none;
+    height: fit-content;
+    /* display: none; */
 }
 
 
@@ -363,35 +386,7 @@ color: #FFFFFF;
     height: 50vh;
 }
 
-.carouselSection {
-    min-height: 100vh;
-    width: 90%;
-}
 
- .carouselContentContainer {
-    width: 85%;
-    gap: 5px;
-    transform: translateY(10px);
-}
-
-.carouselSection .carouselContentBtn {
-    font-size: 18px;
-    min-width: 20%;
-    height: 20%;
-    line-height: 29px;
-
-}
-
- .carouselDisplayText {
- 
-    width: 80%;
-    font-size: 20px;
-    gap: 10px;
-    font-weight: 300;
-    line-height: 30px;
- 
-
-}
 
 }
 
