--- a/clientBlogs/src/components/css/Header.css
+++ b/clientBlogs/src/components/css/Header.css
@@ -39,6 +39,9 @@
     color: #F74D79;
     border:1px solid #F74D79;
     background-color: rgba(255, 95, 95, 0.154);
+
+    background-color: #ff6f6f26;
+
     margin: 10px;
 }
 
