--- a/clientBlogs/src/pages/css/Setting.css
+++ b/clientBlogs/src/pages/css/Setting.css
@@ -103,8 +103,9 @@
   height: fit-content;
   padding: 30px;
   margin-top: 10px;
-  /* align-items: center; */
-  /* justify-content: center; */
+   /* align-items: center;  
+   justify-content: center; */
+
 }
 .section2 .input_radio {
   border-radius: 10.091px;
@@ -190,7 +191,7 @@
 .section3 .left_boxes {
   display: flex;
   flex-direction: row;
-  gap: 50px;
+  gap: 8%;
 }
 .section3 .inner_box {
   width: 40vw;
@@ -201,6 +202,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  margin: 0;
 }
 .section3 .inner_box .headers {
   color: white;
@@ -240,7 +242,7 @@
 .section3 .right_boxes {
   display: flex;
   flex-direction: row;
-  gap: 50px;
+  gap: 8%;
 }
 .section3 .subtitle {
   font-size: 18px;
@@ -313,4 +315,74 @@
 
 .section5 .btn {
   width: 220px;
+}
+
+@media screen and (max-width:768px) {
+
+  .section1 .form, .section2 .form_radio{
+    width: 65vw;
+  }
+  
+  .ssection .titleContainer {
+    width: 65vw;
+    
+  }
+
+  .section3 .inner_box{
+    height: 35vw;
+  }
+
+ 
+}
+
+@media screen and (max-width:375px) {
+
+  .section1 .form, .section2 .form_radio{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 70vw;
+    gap: 0;
+  }
+
+  .section1 .form .right_form .inputBox{
+    height: 10vw;
+  }
+
+  .section1 .form .right_form{
+    margin-top: 0;
+  }
+
+  .ssection .titleContainer {
+    width: 70vw;
+    
+  }
+
+  .form_radio .input_radio{
+    width: 60vw;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    height: 20vw;
+    padding: 4px;
+  }
+
+  .input_radio .label{
+    width: 39vw;
+  }
+
+  .section3 .left_boxes, .section3 .right_boxes{
+    display: flex;
+    flex-direction: column;
+    gap: 10vw;
+
+  }
+
+  .section3 .inner_box{
+    width: 65vw;
+    min-height: 65vw;
+  }
+
+  
+  
 }
